--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,8 @@
-application: helloworld
+application: converttoical
 version: 1
 runtime: python
 api_version: 1
 
 handlers:
 - url: /.*
-  script: helloworld.py
+  script: converttoical.py
